syntax = "proto3";

package github.com.sadensmol.test_gambling_be_go;


import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {version: "1.0"};
  external_docs: {
    url: "http://localhost:8081";
  }
  schemes: HTTP;
};

message DepositRequest {
  int64 userID = 1;
  int64 amount = 2;
}

message WithdrawRequest {
  int64 userID = 1;
  int64 amount = 2;
}

message GetWalletBalanceRequest {
  int64 userID =1;
}

message GetWalletBalanceResponse {
  int64 balance = 2;
}

message ErrorResponse {
  string message =1;
}

service WalletService {
  rpc Deposit(DepositRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/wallet/deposit"
      body: "*"
    };
  }

  rpc Withdraw(WithdrawRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/wallet/withdraw"
      body: "*"
    };
  }

  rpc GetByUserId(GetWalletBalanceRequest) returns (GetWalletBalanceResponse) {
    option (google.api.http) = {
      get: "/api/wallet/balance/{userID}"
    };
  }
}

